# tricc

./: .gitignore  test.xml
diagram-parser/: README.md  debug_parser.py  debug_parser_new.py  pyproject.toml  setup.py  try_parser.py
diagram-parser/examples/: .$dx_without_pictures.drawio.bkp  .$dx_without_pictures.drawio.dtmp  dx_without_pictures.drawio
diagram-parser/src/questionnaire_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diagram-parser/src/questionnaire_parser/business_rules/: edge_rules.py  external_flags.py  externals.json  node_rules.py
diagram-parser/src/questionnaire_parser/core/: README.MD  graph.py  graph_converter.py  parser.py
diagram-parser/src/questionnaire_parser/exceptions/: parsing.py  validation.py
diagram-parser/src/questionnaire_parser/models/: diagram.py  diagram_elements.py
diagram-parser/src/questionnaire_parser/utils/: debugging.py  edge_error_handler.py  edge_logic.py  logging.py  validation.py  validation_messages.py
diagram-parser/tests/core/: test_parser.py
diagram-parser/tests/models/: debug_parser_new.py
diagram-parser/tests/test_data/invalid_diagrams/: dx_without_pictures.drawio
diagram-parser/tests/test_data/valid_diagrams/: .$dx_without_pictures.drawio.bkp  .$dx_without_pictures.drawio.dtmp  dx_without_pictures.drawio
