[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "questionnaire_parser"
version = "0.1.0"
dependencies = [
    "pydantic",
    "networkx",
    "matplotlib",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[tool.pylint.MASTER]
extension-pkg-allow-list = ["lxml.etree"]